add new navigation bar

--- a/index.html
+++ b/index.html
@@ -14,52 +14,33 @@
     <title>Make Me</title>
   </head>
   <body>
-    <header class="parent">
-      <div class="navbar">
-        <a href="index.html">
-          <div class=" border">
-              <i class="fa-solid fa-house"></i>
-              <p>MakeMe</p>
-          </div>
-        </a>
-          <a href="product.html" target="_main">
-            <div class="border">
-              <i class="fa-brands fa-product-hunt" title="Products"></i>
-              <p>Product</p>
-            </div>
+    <div class="nav">
+      <input type="checkbox" id="nav-check" />
+      <div class="nav-header">
+        <div class="nav-title">
+          <a href="#">
+            <img src="#"/>
           </a>
-          <a href="offer.html">
-            <div class="border">
-              <i class="fa-solid fa-bell" title="Offer"></i>
-              <p>Price</p>
-            </div>
-          </a>
-          <div class="nav-searchbar bar-border">
-            <select class="nav-option">
-              <option>All</option>
-            </select>
-            <input placeholder="Search MakeMe" class="nav-input" />
-            <button><i class="fa-solid fa-magnifying-glass"></i></button>
-          </div>
-          <a href="#About" target="0">
-            <div class="border">
-              <i class="fa-solid fa-address-card" title="About Us"></i>
-              <p>About</p>
-            </div>
-          </a>
-          <a href="#Contact" target="0">
-            <div class="border">
-              <i class="fa-solid fa-comments" title="Contact Us"></i>
-              <p>Contact</p>
-            </div>
-          </a>
-          <a href="login.html" target="0">
-            <div class="border">
-              <i class="fa-solid fa-user" title="Login"></i>
-              <p>Account</p>
-            </div>
-          </a>
+          
         </div>
+      </div>
+      <div class="nav-btn">
+        <label for="nav-check">
+          <span></span>
+          <span></span>
+          <span></span>
+        </label>
+      </div>
+  
+      <div class="nav-links">
+          <a href="#">Home</a>
+          <a href="#">Product</a>
+          <a href="#">Offer</a>
+          <a href="#k">Login</a>
+          <a href="#">Contact</a>
+          <a href="#">About us</a>
+      </div>
+    </div>
     </header>
     <div class="hero-sec">
       <div class="getstart">
