--- a/index.html
+++ b/index.html
@@ -14,16 +14,14 @@
     <title>Make Me</title>
   </head>
   <body>
+    <header class="parent">
     <div class="nav">
       <input type="checkbox" id="nav-check" />
-      <div class="nav-header">
+      <!-- <div class="nav-header">
         <div class="nav-title">
-          <a href="#">
-            <img src="#"/>
-          </a>
           
         </div>
-      </div>
+      </div> -->
       <div class="nav-btn">
         <label for="nav-check">
           <span></span>
@@ -33,12 +31,12 @@
       </div>
   
       <div class="nav-links">
-          <a href="#">Home</a>
-          <a href="#">Product</a>
-          <a href="#">Offer</a>
-          <a href="#k">Login</a>
-          <a href="#">Contact</a>
-          <a href="#">About us</a>
+          <a href="index.html">Home</a>
+          <a href="#product">Product</a>
+          <a href="offer.html">Offer</a>
+          <a href="#Contact">Contact</a>
+          <a href="#About">About</a>
+          <a href="login.html">Login</a>
       </div>
     </div>
     </header>
@@ -56,7 +54,7 @@
         </div>
       </div> 
     </div>
-    <div class="productback">
+    <div id="product" class="productback">
       <div class="product_1">
        <div class="product_head">
         <h3>Celebrate EVERY Moment with GIFTs From small Shops!</h3>
