--- a/index.html
+++ b/index.html
@@ -15,122 +15,118 @@
   </head>
   <body>
     <header class="parent">
-    <div class="nav">
-      <input type="checkbox" id="nav-check" />
-      <!-- <div class="nav-header">
-        <div class="nav-title">
-          
+      <div class="nav">
+        <input type="checkbox" id="nav-check" />
+        <div class="nav-btn">
+          <label for="nav-check">
+            <span></span>
+            <span></span>
+            <span></span>
+          </label>
         </div>
-      </div> -->
-      <div class="nav-btn">
-        <label for="nav-check">
-          <span></span>
-          <span></span>
-          <span></span>
-        </label>
-      </div>
-  
-      <div class="nav-links">
+        <div class="nav-links">
           <a href="index.html">Home</a>
           <a href="#product">Product</a>
-          <a href="offer.html">Offer</a>
-          <a href="#Contact">Contact</a>
+          <a href="offer.html">Pricing</a>
           <a href="#About">About</a>
-          <a href="login.html">Login</a>
+          <a href="#Contact">Contact</a>
+          <a href="login.html">Account</a>
+        </div>
       </div>
-    </div>
     </header>
     <div class="hero-sec">
       <div class="getstart">
-        <h1>
-         Welcome to our website.
-        </h1>
+        <h1>Welcome to our website.</h1>
         <h3>
-          We are dedicated to providing quality information and services to our customers.<br>
+          We are dedicated to providing quality information and services to our
+          customers.<br />
           Explore our website to learn more about what we offer.
         </h3>
-        <div class="get_button ">
-          <a href="login.html"><button >Explore Now</button></a>
+        <div class="get_button">
+          <a href="login.html"><button>Explore Now</button></a>
         </div>
-      </div> 
+      </div>
     </div>
     <div id="product" class="productback">
       <div class="product_1">
-       <div class="product_head">
-        <h3>Celebrate EVERY Moment with GIFTs From small Shops!</h3>
-       </div>
+        <div class="product_head">
+          <h3>Celebrate EVERY Moment with GIFTs From small Shops!</h3>
+        </div>
         <div class="gift_box border">
-          <img src="image/mobilephone.jpg">
+          <img src="image/mobilephone.jpg" />
           <h3>Mobile Phone</h3>
         </div>
         <div class="gift_box border">
-          <img src="image/laptop.png">
+          <img src="image/laptop.png" />
           <h3>Laptop</h3>
         </div>
         <div class="gift_box border">
-          <img src="image/buildPc.jpg">
+          <img src="image/buildPc.jpg" />
           <h3>Build Your PC</h3>
         </div>
         <div class="gift_box border">
-          <img src="image/fashion.png">
+          <img src="image/fashion.png" />
           <h3>Fashion</h3>
         </div>
         <div class="gift_box border">
-          <img src="image/furniture.jpg">
+          <img src="image/furniture.jpg" />
           <h3>Furniture</h3>
         </div>
         <div class="gift_box border">
-          <img src="image/gadge.jpg">
+          <img src="image/gadge.jpg" />
           <h3>Electronics</h3>
         </div>
-     </div>
+      </div>
       <div class="product_2">
         <div class="product_box border">
-          <img src="image/laptop-box.png">
+          <img src="image/laptop-box.png" />
           <h3>Microsoft Office home and Student 2021 worth (Lifetime)</h3>
           <h4>৳76999</h4>
-         <h5>৳93999</h5> 
+          <h5>৳93999</h5>
         </div>
         <div class="product_box border">
-          <img src="image/laptop-box.png">
+          <img src="image/laptop-box.png" />
           <h3>Microsoft Office home and Student 2021 worth (Lifetime)</h3>
           <h4>৳76999</h4>
-         <h5>৳93999</h5> 
+          <h5>৳93999</h5>
         </div>
         <div class="product_box border">
-          <img src="image/laptop-box.png">
+          <img src="image/laptop-box.png" />
           <h3>Microsoft Office home and Student 2021 worth (Lifetime)</h3>
           <h4>৳76999</h4>
-         <h5>৳93999</h5> 
+          <h5>৳93999</h5>
         </div>
         <div class="product_box border">
-          <img src="image/laptop-box.png">
+          <img src="image/laptop-box.png" />
           <h3>Microsoft Office home and Student 2021 worth (Lifetime)</h3>
           <h4>৳76999</h4>
-         <h5>৳93999</h5> 
+          <h5>৳93999</h5>
         </div>
         <div class="product_box border">
-          <img src="image/laptop-box.png">
+          <img src="image/laptop-box.png" />
           <h3>Microsoft Office home and Student 2021 worth (Lifetime)</h3>
           <h4>৳76999</h4>
-         <h5>৳93999</h5> 
+          <h5>৳93999</h5>
         </div>
       </div>
       <div class="see_more">
-        <a href="product.html"><button>See more <i class="fa-solid fa-arrow-down-long"></i> </button></a>
+        <a href="product.html"
+          ><button>See more <i class="fa-solid fa-arrow-down-long"></i></button
+        ></a>
       </div>
     </div>
     <div id="About" class="about">
       <div class="about_info">
         <h1>We are MakeMe.</h1>
         <h3>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br> Laborum
-          illum, repellat quaerat exercitationem optio quidem voluptas omnis
-          quisquam<br> nulla laboriosam sit totam ex corrupti veritatis natus sed
-          et. Quos, ipsum?
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br />
+          Laborum illum, repellat quaerat exercitationem optio quidem voluptas
+          omnis quisquam<br />
+          nulla laboriosam sit totam ex corrupti veritatis natus sed et. Quos,
+          ipsum?
         </h3>
         <div class="info_button">
-          <a href=""><button >Learn More</button></a>
+          <a href=""><button>Learn More</button></a>
         </div>
       </div>
       <div class="info_card">
@@ -144,10 +140,15 @@
           placeat minima ipsa dicta quod natus sapiente laudantium quae, atque
           dolores voluptates doloribus possimus, dolore recusandae optio. Iste,
           obcaecati voluptatem.
-          <br>
+          <br />
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam sequi
           animi quidem officia, eum ipsa at! Magni, omnis! Unde deleniti quis,
           qui minima harum ipsum itaque sunt praesentium sed accusantium.
+          <br />
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum enim
+          distinctio accusantium nemo est velit asperiores minima commodi fugiat
+          magni! Ex fugiat expedita perferendis quae sunt eos, modi voluptate
+          dolor!
         </p>
       </div>
       <div class="info_card">
@@ -165,40 +166,52 @@
             <h3>Design Without Barriers</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
-              porro mollitia iusto, dolorem nostrum sunt suscipit blanditiis Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum vitae sed soluta quasi eius fugit, unde in mollitia inventore corporis
+              porro mollitia iusto, dolorem nostrum sunt suscipit blanditiis
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum
+              vitae sed soluta quasi eius fugit, unde in mollitia inventore
+              corporis
             </p>
           </div>
           <div class="box border">
             <h3>Product Creation</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
-              porro mollitia iusto, dolorem nostrum sunt suscipit blanditiis Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum vitae sed soluta quasi eius fugit, unde in mollitia inventore corporis
+              porro mollitia iusto, dolorem nostrum sunt suscipit blanditiis
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum
+              vitae sed soluta quasi eius fugit, unde in mollitia inventore
+              corporis
             </p>
           </div>
           <div class="box border">
             <h3>Beyond Design</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
-              porro mollitia iusto, dolorem nostrum sunt suscipit blanditiis Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum vitae sed soluta quasi eius fugit, unde in mollitia inventore corporis
+              porro mollitia iusto, dolorem nostrum sunt suscipit blanditiis
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum
+              vitae sed soluta quasi eius fugit, unde in mollitia inventore
+              corporis
             </p>
           </div>
-          </div> 
         </div>
       </div>
-      <div id="Contact" class="contact">
-        <form>
-          <h3 id="contactUs">Contact Us</h3>
-          <label for="name">Name</label>
-          <input type="text" placeholder="Name" id="name">
-          <label for="Email">Email</label>
-          <input type="email" placeholder="Email" id="Email">
-          <label for="text">Write Your Massage</label>
-          <textarea type="text" placeholder="Write here...." id="massage"></textarea>
-          <button class="bar-border">Submit</button>
-          </div>
+    </div>
+    <div id="Contact" class="contact">
+      <form>
+        <h3 id="contactUs">Contact Us</h3>
+        <label for="name">Name</label>
+        <input type="text" placeholder="Name" id="name" />
+        <label for="Email">Email</label>
+        <input type="email" placeholder="Email" id="Email" />
+        <label for="text">Write Your Massage</label>
+        <textarea
+          type="text"
+          placeholder="Write here...."
+          id="massage"
+        ></textarea>
+        <button class="bar-border">Submit</button>
       </form>
-      </div>
-    <footer >
+    </div>
+    <footer>
       <div class="last-bar">
         <div class="footer-1">
           <ul>
