add new product

--- a/index.html
+++ b/index.html
@@ -78,35 +78,35 @@
         </div>
       </div>
       <div class="product_2">
-        <div class="product_box border">
-          <img src="image/laptop-box.png" />
-          <h3>Microsoft Office home and Student 2021 worth (Lifetime)</h3>
+        <<div class="product_box border">
+          <img src="image/pc-box.png">
+          <h3>Intel Pentium Gold G7400 Budget Desktop PC</h3>
           <h4>৳76999</h4>
-          <h5>৳93999</h5>
+         <h5>৳93999</h5> 
         </div>
         <div class="product_box border">
-          <img src="image/laptop-box.png" />
-          <h3>Microsoft Office home and Student 2021 worth (Lifetime)</h3>
-          <h4>৳76999</h4>
-          <h5>৳93999</h5>
+          <img src="image/mobile-box.png">
+          <h3>Xiaomi Poco M6 Pro 4G</h3>
+          <h4>৳25999</h4>
+         <h5>৳31999</h5> 
         </div>
         <div class="product_box border">
-          <img src="image/laptop-box.png" />
-          <h3>Microsoft Office home and Student 2021 worth (Lifetime)</h3>
-          <h4>৳76999</h4>
-          <h5>৳93999</h5>
+          <img src="image/table-box.png">
+          <h3>COMPUTER TABLE LB-12-B</h3>
+          <h4>৳10999</h4>
+         <h5>৳14999</h5> 
         </div>
         <div class="product_box border">
-          <img src="image/laptop-box.png" />
-          <h3>Microsoft Office home and Student 2021 worth (Lifetime)</h3>
-          <h4>৳76999</h4>
-          <h5>৳93999</h5>
+          <img src="image/fan-box.png">
+          <h3>Vision DC Table Fan -12"</h3>
+          <h4>৳1499</h4>
+         <h5>৳1999</h5> 
         </div>
         <div class="product_box border">
-          <img src="image/laptop-box.png" />
-          <h3>Microsoft Office home and Student 2021 worth (Lifetime)</h3>
+          <img src="image/laptop-box.png">
+          <h3>Microsoft Office home and Student</h3>
           <h4>৳76999</h4>
-          <h5>৳93999</h5>
+         <h5>৳93999</h5> 
         </div>
       </div>
       <div class="see_more">
